--- a/shopmaster-pwa/package.json
+++ b/shopmaster-pwa/package.json
@@ -9,13 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^12.6.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
-    "firebase": "^12.6.0",
     "react-router-dom": "^7.10.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@types/react": "^19.2.7",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
